--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <title>My First Web Page</title>
 </head>
 <body>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <h1>Welcome to My Website</h1>
     <p>This is a simple example of an HTML document.</p>
+    <button type="button" class="btn btn-secondary">Secondary</button>
     <ul>
         <li>Item 1</li>
         <li>Item 2</li>
