--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <table id="data-table" border="1">
         <thead>
             <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Age</th>
+                <th>track</th>
+                <th>comment</th>
+                <th>name</th>
+                <th>timestamp</th>
                 <!-- 他の列をここに追加 -->
             </tr>
         </thead>
