--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     
     // Ajaxリクエストを送信
     $.ajax({
-        url: " https://08ngbptisd.execute-api.us-east-2.amazonaws.com/test_POST",
+        url: "https://08ngbptisd.execute-api.us-east-2.amazonaws.com/test_POST/test",
         type: "POST",
         dataType: "json",
         data: JSON.stringify(requestData),
