--- a/index.html
+++ b/index.html
@@ -43,17 +43,22 @@
         }
     });
 
-    function populateTable(data) {
-        for (var i = 0; i < data.length; i++) {
-            var row = $("<tr>");
-            row.append("<td>" + data[i].Comment + "</td>");
-            row.append("<td>" + data[i].Timestamp + "</td>");
-            row.append("<td>" + data[i].Track + "</td>");
-            row.append("<td>" + data[i].Name + "</td>");
-            // 他の列をここに追加
-            tableBody.append(row);
-        }
+function populateTable(data) {
+    for (var i = 0; i < data.Items.length; i++) {
+        var item = data.Items[i];
+        var row = $("<tr>");
+
+        // 各データプロパティをセルに追加
+        row.append("<td>" + item.Comment.S + "</td>"); // Commentプロパティ
+        row.append("<td>" + item.Timestamp.N + "</td>"); // Timestampプロパティ
+        row.append("<td>" + item.Track.S + "</td>"); // Trackプロパティ
+        row.append("<td>" + item.Name.S + "</td>"); // Nameプロパティ
+
+        // 他の列を追加する場合は、ここに追加
+
+        tableBody.append(row);
     }
+}
 });
 
 </script>
