--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     });
 
 function populateTable(data) {
-    for (var i = 0; i < data.Items.length; i++) {
+    for (var i = 0; i < scanData.Items.length; i++) {
         var item = data.Items[i];
         var row = $("<tr>");
 
