--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ function populateTable(data) {
         row.append("<td>" + item.Timestamp.N + "</td>"); // Timestampプロパティ
         row.append("<td>" + item.Track.S + "</td>"); // Trackプロパティ
         row.append("<td>" + item.Name.S + "</td>"); // Nameプロパティ
-        row.append("<td><button type="button" class="btn btn-secondary">Secondary</button></td>"); // Nameプロパティ
+        row.append("<td><button type='button' class='btn btn-secondary'>Secondary</button></td>"); // Nameプロパティ
 
         // 他の列を追加する場合は、ここに追加
 
