--- a/index.html
+++ b/index.html
@@ -35,11 +35,16 @@
     </ul>
 </div>
 <!-- aws cognito sdk  //-->
-    <script src="js/jsbn.js"></script>
+    <!--<script src="js/jsbn.js"></script>
     <script src="js/jsbn2.js"></script>
     <script src="js/sjcl.js"></script>
     <script src="js/aws-cognito-sdk.min.js"></script>
-    <script src="js/amazon-cognito-identity.min.js"></script>
+    <script src="js/amazon-cognito-identity.min.js"></script>-->
+    <script src="http://www-cs-students.stanford.edu/%7Etjw/jsbn/jsbn.js"></script>
+    <script src="http://www-cs-students.stanford.edu/%7Etjw/jsbn/jsbn2.js"></script>  
+    <script src="https://raw.githubusercontent.com/bitwiseshiftleft/sjcl/master/sjcl.js"></script>
+    <script src="https://raw.githubusercontent.com/amazon-archives/amazon-cognito-identity-js/master/dist/aws-cognito-sdk.min.js"></script>
+    <script src="https://raw.githubusercontent.com/amazon-archives/amazon-cognito-identity-js/master/dist/amazon-cognito-identity.min.js"></script>
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.5.2.min.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
