--- a/index.html
+++ b/index.html
@@ -1,39 +1,35 @@
 <!DOCTYPE html>
-<html >
+<html>
   <head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-        <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8" />
+    <title>Sign Up</title>
+    <script src="./js/jsbn.js"></script>
+    <script src="./js/jsbn2.js"></script>
+    <script src="./js/sjcl.js"></script>
+    <script src="./js/aws-sdk.min.js"></script>
+    <script src="./js/aws-cognito-sdk.min.js"></script>
+    <script src="./js/amazon-cognito-identity.min.js"></script>
   </head>
   <body>
-    <div class="wrapper">
-    <div class="container">
-        <h1 class="msg">Welcome</h1>
-
-        <form class="form">
-            <input type="text" placeholder="Username" id="name">
-            <input type="password" placeholder="Password" id="password">
-            <button type="submit" id="login-button">Login</button>
-
-            <div style="margin-top: 20px;"><a href="signup.html">Sign Up</a></div>
-        </form>
-
-
+    <div id="signup">
+      <h1>Sign Up</h1>
+      <div id="message"><span id="message-span" style="color: red;"></span></div>
+      <form name="form-signup">
+        <span style="display: inline-block; width: 150px;">User ID(Email)</span>
+        <input type="text" id="email" placeholder="Email Address" />
+        <br />
+        <span style="display: inline-block; width: 150px;">Name</span>
+        <input type="text" id="name" placeholder="Name" />
+        <br />
+        <span style="display: inline-block; width: 150px;">Password</span>
+        <input type="password" id="password" placeholder="Password" />
+        <br /><br />
+        <input type="button" id="createAccount" value="Create Account" />
+      </form>
     </div>
+    <br />
+    <a href="./signin.html">Sign In!</a>
 
-    <ul class="bg-bubbles">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
-</div>
 <!-- aws cognito sdk  //-->
     <!--<script src="js/jsbn.js"></script>
     <script src="js/jsbn2.js"></script>
@@ -50,5 +46,6 @@
 
     <script src="js/index.js"></script>
 
+    <script src="js/signup.js" defer></script>
   </body>
 </html>
