--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <script src="js/jsbn2.js"></script>
     <script src="js/sjcl.js"></script>
     <script src="js/aws-cognito-sdk.min.js"></script>
-    <script src="js/amazon-cognito-identity.min.js"></script>-->
+    <script src="js/amazon-cognito-identity.min.js"></script>
+    <script src="js/signup.js" defer></script>-->
     <script src="http://www-cs-students.stanford.edu/%7Etjw/jsbn/jsbn.js"></script>
     <script src="http://www-cs-students.stanford.edu/%7Etjw/jsbn/jsbn2.js"></script>  
     <script src="https://raw.githubusercontent.com/bitwiseshiftleft/sjcl/master/sjcl.js"></script>
@@ -39,7 +40,5 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
     <script src="js/index.js"></script>
-
-    <script src="js/signup.js" defer></script>
   </body>
 </html>
