--- a/index.html
+++ b/index.html
@@ -2,28 +2,17 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Sign Up</title>
+    <title>Menu</title>
+    
   </head>
   <body>
-    <div id="signup">
-      <h1>Sign Up</h1>
-      <div id="message"><span id="message-span" style="color: red;"></span></div>
-      <form name="form-signup">
-        <span style="display: inline-block; width: 150px;">User ID(Email)</span>
-        <input type="text" id="email" placeholder="Email Address" />
-        <br />
-        <span style="display: inline-block; width: 150px;">Name</span>
-        <input type="text" id="name" placeholder="Name" />
-        <br />
-        <span style="display: inline-block; width: 150px;">Password</span>
-        <input type="password" id="password" placeholder="Password" />
-        <br /><br />
-        <input type="button" id="createAccount" value="Create Account" />
-      </form>
+    <div id="menu">
+      <h1 id="name"></h1>
+      <h2 id="role"></h2>
+      <p id="email"></p>
     </div>
-    <br />
-    <a href="./signin.html">Sign In!</a>
-
+    <button id="signout" hidden>Sign Out</button>
+    
 <!-- aws cognito sdk  //-->
     <!--
     <script src="js/aws-cognito-sdk.min.js"></script>
