--- a/signup.html
+++ b/signup.html
@@ -10,6 +10,9 @@
       <div id="message"><span id="message-span" style="color: red;"></span></div>
       <form name="form-signup">
         <span style="display: inline-block; width: 150px;">User ID(Email)</span>
+        <input type="text" id="userid" placeholder="Email Address" />
+        <br />
+        <span style="display: inline-block; width: 150px;">Email</span>
         <input type="text" id="email" placeholder="Email Address" />
         <br />
         <span style="display: inline-block; width: 150px;">Name</span>
