--- a/signup.html
+++ b/signup.html
@@ -9,14 +9,14 @@
       <h1>Sign Up</h1>
       <div id="message"><span id="message-span" style="color: red;"></span></div>
       <form name="form-signup">
-        <span style="display: inline-block; width: 150px;">User ID(Email)</span>
-        <input type="text" id="userid" placeholder="Email Address" />
+        <span style="display: inline-block; width: 150px;">UserName</span>
+        <input type="text" id="userid" placeholder="UserName" />
         <br />
         <span style="display: inline-block; width: 150px;">Email</span>
         <input type="text" id="email" placeholder="Email Address" />
         <br />
         <span style="display: inline-block; width: 150px;">Name</span>
-        <input type="text" id="name" placeholder="Name" />
+        <input type="text" id="name" placeholder="姓名" />
         <br />
         <span style="display: inline-block; width: 150px;">Password</span>
         <input type="password" id="password" placeholder="Password" />
