--- a/signin.html
+++ b/signin.html
@@ -11,7 +11,7 @@
       <div id="message"><span id="message-span" style="color: red;"></span></div>
       <form name="form-signin">
         <span style="display: inline-block; width: 150px;">Email Address</span>
-        <input type="text" id="email" placeholder="Email Address" />
+        <input type="text" id="username" placeholder="UserName" />
         <br />
         <span style="display: inline-block; width: 150px;">Password</span>
         <input type="password" id="password" placeholder="Password" />
